name:                serialport-probe
version:             0.1.0.0
synopsis:            Probe the operating system's serial ports (linux so far)
description:         
license:             BSD3
license-file:        LICENSE
author:              Stephen Blackheath
maintainer:          docks.cattlemen.stephen@blacksapphire.com
-- copyright:           
category:            Hardware
build-type:          Simple
extra-source-files:  examples/serialports.hs
cabal-version:       >=1.10

library
  exposed-modules:   
      System.Hardware.Serialport.Probe
  build-depends:       base >=4.5 && <5, unix >= 2.6, filepath >= 1.3, directory >= 1.2
  default-language:    Haskell2010
